--- a/index.html
+++ b/index.html
@@ -1,7 +1,26 @@
-<!doctype html>
-<html lang="uk" data-theme="auto">
 <head>
-  <!-- Google Analytics 4 -->
+  <link rel="canonical" href="https://presidencyclock.com/">
+
+  <!-- Open Graph / Twitter -->
+  <meta property="og:url" content="https://presidencyclock.com/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="СКІЛЬКИ ДОНАЛЬДУ ТРАМПУ ЗАЛИШИЛОСЬ БУТИ ПРЕЗИДЕНТОМ?">
+  <meta property="og:description" content="Живий лічильник до 20 січня 2029, 12:00 (Вашингтон).">
+  <meta property="og:image" content="https://presidencyclock.com/og.jpg">
+  <meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:site_name" content="Presidency Clock">
+<meta property="og:locale" content="uk_UA">
+<meta name="twitter:image" content="https://presidencyclock.com/og.jpg">
+  <meta name="twitter:card" content="summary_large_image">
+  <!-- GA4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-N9P6Q1829Q"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-N9P6Q1829Q', { transport_type: 'beacon' });
+  </script>
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-N9P6Q1829Q"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
