--- a/index.html
+++ b/index.html
@@ -184,6 +184,32 @@
       <section class="card" aria-live="polite">
         <div id="timer" class="timer" role="timer" aria-label="Лічильник до завершення строку"></div>
       </section>
+<!-- Share bar -->
+<div class="share">
+  <span class="share__label">Поширити:</span>
+
+  <a id="share-x" class="share__btn" href="#" rel="noopener">
+    <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M18.9 3H22l-7.1 8.1L22.7 21h-6.4l-5-6.6L5 21H2l7.6-8.7L1.5 3H8l4.6 6 6.3-6Z"/></svg>
+    Х
+  </a>
+
+  <a id="share-fb" class="share__btn" href="#" rel="noopener">
+    <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M13.5 22v-8h2.6l.4-3h-3V9c0-.9.3-1.5 1.7-1.5H17V5.1C16.5 5 15.4 5 14.1 5 11.5 5 9.7 6.6 9.7 9.3V11H7v3h2.7v8h3.8z"/></svg>
+    Facebook
+  </a>
+
+  <button id="share-native" class="share__btn" type="button">
+    <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M12 3l4 4h-3v5h-2V7H8l4-4zM6 13h12v6H6v-6z"/></svg>
+    Поділитися…
+  </button>
+
+  <button id="share-copy" class="share__btn" type="button">
+    <svg viewBox="0 0 24 24" aria-hidden="true"><path d="M3.9 12a4.6 4.6 0 014.6-4.6h3v2.2h-3a2.4 2.4 0 100 4.8h3v2.2h-3A4.6 4.6 0 013.9 12zm7.6-2.4h3a2.4 2.4 0 110 4.8h-3v2.2h3a4.6 4.6 0 000-9.2h-3v2.2z"/></svg>
+    Копіювати
+  </button>
+
+  <span id="share-toast" class="share__toast" role="status" aria-live="polite"></span>
+</div>
 
       <details class="faq">
         <summary>Як рахується час?</summary>
